# open-recorder

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: SMOKE-TEST-F2.md  SMOKE-TEST-F3.md  SMOKE-TEST.md
docs/superpowers/plans/: 2026-06-17-open-recorder-f1.md  2026-06-18-open-recorder-f2.md  2026-06-18-open-recorder-f3.md
docs/superpowers/specs/: 2026-06-17-open-recorder-design.md  2026-06-18-open-recorder-f2-design.md  2026-06-18-open-recorder-f3-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/capture/: audio_capture.rs  ffmpeg.rs  finalizer.rs  input.rs  input_mac.rs  input_recorder.rs  mod.rs  source_enum.rs  video_capture.rs  webcam_capture.rs
src-tauri/src/model/: coords.rs  metadata.rs  mod.rs  source.rs  webcam.rs  zoom.rs
src-tauri/src/recording/: coordinator.rs
src-tauri/src/zoom/: export.rs  generate.rs  mod.rs  store.rs
src/components/: CameraPicker.tsx  DevicePill.tsx  Dropdown.tsx  EditorView.tsx  MicPicker.tsx  PreviewCanvas.tsx  RecordControls.tsx  RecordingsList.tsx  SegmentInspector.tsx  SourcePicker.tsx  SourceSelect.tsx  Timeline.tsx  WebcamBubble.tsx
src/lib/: api.ts  format.test.ts  format.ts  timeline.test.ts  timeline.ts  webcam.test.ts  webcam.ts  zoom.test.ts  zoom.ts
src/state/: useEditor.ts  useRecorder.ts
