[package]
name = "open-recorder"
version = "0.1.0"
description = "Open-source cross-platform screen recorder with zoom-on-click and 9:16 social export"
authors = ["OpenRecorder contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scap = "0.0.8"
display-info = "0.5"
cpal = "0.15"
rdev = "0.5"
thiserror = "2"
hound = "3"
nokhwa = { version = "0.10", features = ["input-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

# Pin scap's transitive windows-capture to the version it was written against.
# scap 0.0.8 calls WCSettings::new with 5 args; windows-capture >= 1.4 takes 8
# (E0061), so the default ^1.3.6 resolution to 1.5.x breaks the Windows build.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "=1.3.6"

